objects/Legacy_Case__x.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT__c</fullName>
        <description>ACCOUNT</description>
        <externalDeveloperName>ACCOUNT</externalDeveloperName>
        <label>ACCOUNT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASSET__c</fullName>
        <description>ASSET</description>
        <externalDeveloperName>ASSET</externalDeveloperName>
        <label>ASSET</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <externalDeveloperName>AREA</externalDeveloperName>
        <label>Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAN__c</fullName>
        <externalDeveloperName>CAN</externalDeveloperName>
        <label>CAN</label>
        <length>30</length>
        <referenceTargetField>Account.CAN__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legacy Cases</relationshipLabel>
        <relationshipName>Legacy_Cases</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>CREATEDBY__c</fullName>
        <description>CREATEDBY</description>
        <externalDeveloperName>CREATEDBY</externalDeveloperName>
        <label>CREATEDBY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <externalDeveloperName>CREATED_DATE</externalDeveloperName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>DESCRIPTION</externalDeveloperName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalDeveloperName>FIRST_NAME</externalDeveloperName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATED__c</fullName>
        <externalDeveloperName>LAST_UPDATED</externalDeveloperName>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Closed__c</fullName>
        <externalDeveloperName>LAST_CLOSED</externalDeveloperName>
        <label>Last Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalDeveloperName>LAST NAME</externalDeveloperName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <externalDeveloperName>OWNER</externalDeveloperName>
        <label>Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <externalDeveloperName>PRODUCT</externalDeveloperName>
        <label>Product</label>
        <length>255</length>
        <referenceTargetField>Product2.Siebel_Row_ID__c</referenceTargetField>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Legacy Cases</relationshipLabel>
        <relationshipName>Legacy_Cases</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>ROW_ID__c</fullName>
        <externalDeveloperName>ROW_ID</externalDeveloperName>
        <label>ROW_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_NUM__c</fullName>
        <externalDeveloperName>SR_NUM</externalDeveloperName>
        <label>Case Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>STATUS</externalDeveloperName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <externalDeveloperName>SUMMARY</externalDeveloperName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>TYPE</externalDeveloperName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>SR_NUM__c</columns>
        <columns>CAN__c</columns>
        <columns>Description__c</columns>
        <columns>Owner__c</columns>
        <columns>Status__c</columns>
        <columns>Summary__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Closed__c</columns>
        <columns>Last_Name__c</columns>
        <columns>ROW_ID__c</columns>
        <columns>Type__c</columns>
        <columns>Area__c</columns>
        <columns>Created_Date__c</columns>
        <columns>LAST_UPDATED__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>